Fix CORS for production